132 Avoid deprecated Double(double), Integer(int) constructors
Avoid constructors for numeric types that are deprecated in
Java 9 and use static valueOf() methods instead.